--- a/migration-portal/package.json
+++ b/migration-portal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "migration-portal",
-  "homepage": "/prm-migration-portal",
+  "homepage": "/gpconnect-demonstrator",
   "version": "0.2.0",
   "dependencies": {
     "base64url": "^3.0.1",
