--- a/migration-portal/package.json
+++ b/migration-portal/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.0",
   "dependencies": {
     "base64url": "^3.0.1",
+    "basscss": "^8.0.2",
     "crypto-js": "^3.2.0",
     "jsonpath": "^1.0.2",
     "nhsuk-frontend": "^2.3.2",
