--- a/migration-portal/package.json
+++ b/migration-portal/package.json
@@ -6,6 +6,7 @@
     "base64url": "^3.0.1",
     "basscss": "^8.0.2",
     "crypto-js": "^3.2.0",
+    "emotion": "^10.0.27",
     "jsonpath": "^1.0.2",
     "nhsuk-frontend": "^2.3.2",
     "node-sass": "^4.13.0",
