--- a/migrator/package.json
+++ b/migrator/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "nodemon": "^1.18.10",
+    "react-router-dom": "^5.1.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
