--- a/app-migrator/Dockerfile
+++ b/app-migrator/Dockerfile
@@ -6,7 +6,7 @@ COPY . ./
 RUN dotnet restore
 
 # copy everything else and build app
-RUN dotnet build -c Release -o out --no-restore
+RUN dotnet publish -c Release -o out --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS runtime
 WORKDIR /app
