--- a/app-migrator/Dockerfile
+++ b/app-migrator/Dockerfile
@@ -1,11 +1,11 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS debug
+ENV DOTNET_USE_POLLING_FILE_WATCHER 1
 WORKDIR /app
-
-# copy csproj and restore as distinct layers
 COPY . ./
 RUN dotnet restore
 
-# copy everything else and build app
+FROM debug AS build
+COPY . ./
 RUN dotnet publish -c Release -o out --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS runtime
