--- a/demonstrator/Dockerfile
+++ b/demonstrator/Dockerfile
@@ -17,6 +17,7 @@ COPY ./config ./config
 COPY --from=api-build /app/gpconnect-demonstrator-api/target/gpconnect-demonstrator-api.war ./app.war
 EXPOSE 19191
 EXPOSE 19192
+ENV PORT 19191
 ENV DATABASE_ADDRESS 10.100.100.61
 ENV DATABASE_PORT 3306
 ENV DATABASE_USERNAME gpconnectdbuser
@@ -26,7 +27,7 @@ ENV SERVER_BASE_URL https://data.developer.nhs.uk/gpconnect-demonstrator/v1/fhir
 ENV CONTEXT_PATH /gpconnect-demonstrator/v1/
 ENTRYPOINT java -jar /app/app.war \
 --spring.config.location=file:/app/config/gpconnect-demonstrator-api.properties --server.port=19192 \
---server.port.http=19191 --config.path=/app/config/ --server.ssl.key-store=/app/config/server.jks \
+--server.port.http=$PORT --config.path=/app/config/ --server.ssl.key-store=/app/config/server.jks \
 --server.ssl.key-store-password=password --server.ssl.trust-store=/app/config/server.jks \
 --server.ssl.trust-store-password=password --server.ssl.client-auth=want --datasource.host=$DATABASE_ADDRESS \
 --datasource.port=$DATABASE_PORT --datasource.username=$DATABASE_USERNAME --datasource.password=gpc0nn3ct \
