can fetch patient from source system

--- a/app-migrator/GPConnectAdaptorTests/GPConnectAdaptorTests.csproj
+++ b/app-migrator/GPConnectAdaptorTests/GPConnectAdaptorTests.csproj
@@ -44,6 +44,8 @@
       <None Remove="TestData\TestSlotResponse2.json" />
       <None Remove="TestData\TestSlotResponse3.json" />
       <None Remove="TestData\NoSlotsResponse.json" />
+      <None Remove="TestData\PatientTestData\PositivePAtientLookupResponse.json" />
+      <EmbeddedResource Include="TestData\PatientTestData\PositivePatientLookupResponse.json" />
     </ItemGroup>
 
 </Project>
