--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,12 @@
+setup:
+  addons:
+    plan: jawsdb-maria:kitefin
+    as: gpconnect-db1
+  config:
+    MYSQL_ROOT_PASSWORD: password
+    MYSQL_USER: gpconnectdbuser
+    MYSQL_PASSWORD: gpc0nn3ct
+    MYSQL_DATABASE: gpconnect
 build:
   docker:
     gpconnect-api1: demonstrator/Dockerfile-api
