--- a/migrator/package.json
+++ b/migrator/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "base64url": "^3.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.18.10",
     "react-router-dom": "^5.1.2",
