--- a/heroku.yml
+++ b/heroku.yml
@@ -10,12 +10,5 @@ setup:
 build:
   docker:
     gpconnect-api1: demonstrator/Dockerfile-api
-  config:
-    DATABASE_ADDRESS: DATABASE_URL
-    DATABASE_USERNAME: gpconnectdbuser
-    DATABASE_PASSWORD: gpc0nn3ct
-    DATABASE_SCHEMA: gpconnect
-    SERVER_BASE_URL: https://data.developer.nhs.uk/gpconnect-demonstrator/v1/fhir
-    CONTEXT_PATH: /gpconnect-demonstrator/v1/
 run:
-  gpconnect-api1: java -jar /app/app.war
+  gpconnect-api1: java -jar /app/app.war --spring.config.location=file:/app/config/gpconnect-demonstrator-api.properties --server.port=2002 --server.port.http=$PORT --config.path=/app/config/ --server.ssl.key-store=/app/config/server.jks --server.ssl.key-store-password=password --server.ssl.trust-store=/app/config/server.jks --server.ssl.trust-store-password=password --server.ssl.client-auth=want --datasource.host=gpconnect-db1 --datasource.port=3306 --datasource.username=gpconnectdbuser --datasource.password=gpc0nn3ct --datasource.schema=gpconnect --serverBaseUrl=https://data.developer.nhs.uk/gpconnect-demonstrator/v1/fhir --server.contextPath=/gpconnect-demonstrator/v1/
