refactored tests of httpclientwrappers
refactored tests of httpclientwrappers

--- a/app-migrator/GPConnectAdaptor/GPConnectAdaptor.csproj
+++ b/app-migrator/GPConnectAdaptor/GPConnectAdaptor.csproj
@@ -41,4 +41,8 @@
       <Compile Remove="Models\Slot\ValueCodeableConcept.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Location" />
+    </ItemGroup>
+
 </Project>
